# TrajectoryHomework

./: README.md
astar_path_planner/: CMakeLists.txt  package.xml
astar_path_planner/launch/: astar_planner.launch
astar_path_planner/rviz/: astar_path_planner.rviz
astar_path_planner/src/: BSplineTrajectory.cpp  Trajectory.cpp  astar_planner.cpp  obstacle_generator.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/lib/astar_path_planner/: astar_planner  obstacle_generator
devel/lib/pkgconfig/: astar_path_planner.pc
devel/share/astar_path_planner/cmake/: astar_path_plannerConfig.cmake
